--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun Trx-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>750 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TUzSPnHR66yPj4Qc4KzKnaDqDp67jqDfJn" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
+                            <p class="text-center"><span id="rewards1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="sunstake"><strong>Stake</strong></a></h3>
                         </div>
@@ -94,7 +94,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>DMH TRX-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>5000 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TKV1ZampzDNaWtLwH31BkcKB4GyCwK8Pjc/code" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
+                            <p class="text-center"><span id="rewards0" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="dmhstake"><strong>Stake</strong></a></h3>
                         </div>
@@ -151,6 +151,7 @@
                     </div>
                 </div>
             </div>
+		<script src="mainpage.js"></script>
         </div>
 	            <div id="installmetamask" style="color:Red; display:block;"> <p class="mbr-text text1 text-aling pt-2 mbr-light mbr-fonts-style display-5">
 <a href="https://www.tronlink.org/" target="_new"><em>If you can see this please unlock your wallet</em></a></p></div> <br>
