--- a/universe.html
+++ b/universe.html
@@ -42,11 +42,11 @@
                             <h1 class="text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 37px;"><br></h1>
                             <h3 class="text-center white" id="w">Sun Trx-LP</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun Trx-LP</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>750 DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TUzSPnHR66yPj4Qc4KzKnaDqDp67jqDfJn" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="sunstake" href="#"><strong>Stake Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
@@ -56,11 +56,11 @@
                             <h1 class="text-center card-title"><img src="assets/img/1044722.png" style="width: 37px;"><br></h1>
                             <h3 class="text-center white" id="w">Dark Matter TRX-LP</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>DMH TRX-LP</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>5000 DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TKV1ZampzDNaWtLwH31BkcKB4GyCwK8Pjc/code" style="margin-bottom: 32px;">Open Source</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="dmhstake"><strong>Stake Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
