--- a/DMHStake.html
+++ b/DMHStake.html
@@ -43,7 +43,7 @@
                             <h1 class="text-center"><span id="stakedBalance"><strong>NaN</strong><br></span></h1>
                             <h6 class="text-center"><strong>DMH Trx-LP&nbsp;</strong>staked</h6>
                             <p class="text-center"><strong>DMH Trx-LP&nbsp;</strong>Balance&nbsp;<span id="tokenBalance">NaN</span></p>
-                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
+                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Stake</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
                                 <button
                                     class="btn btn-primary button" id="unstake" type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button>
                             </p>
