--- a/TewkenStake.html
+++ b/TewkenStake.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
-            <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
+            <div class="text-left"><img src="assets/img/Vvp2u3h.png" style="width: 50px;"><a class="navbar-brand text-left" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
             <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
             <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.swap</strong></a></div>
         </div>
@@ -56,7 +56,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="tweb_dmh.js"></script>
+    <script src="tweb_tewken.js"></script>
 </body>
 
 </html>
