--- a/TewkenStake.html
+++ b/TewkenStake.html
@@ -12,14 +12,14 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
-        <div class="container">
-            <div class="text-left"><img src="assets/img/Vvp2u3h.png" style="width: 50px;"><a class="navbar-brand text-left" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
+        <div class="container">   
+            <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
             <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
             <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.swap</strong></a></div>
         </div>
     </nav>
     <div class="text-center" style="padding-top: 50px;">
-        <h1 class="display-2 text-center"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
+        <h1 class="display-2 text-center"><img src="assets/img/Vvp2u3h.png" style="width: 75px;"><br></h1>
         <h1><strong>Tewken</strong></h1>
     </div>
     <h3 class="text-center">Stake <strong>Tewken&nbsp;</strong>and earn <strong>DMH</strong></h3>
