--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                             <h1 class="text-center card-title"><img src="assets/img/Vvp2u3h.png" style="width: 37px;"><br></h1>
                             <h3 class="text-center white" id="w">Tewken</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Tewken</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
-                            <p class="text-center"><span class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>750 DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="Open Source" href="https://tronscan.io/#/contract/TNt2fqwH7kC7WUTnSYTTpoe3obTXBnYdFr" style="margin-bottom: 32px;">Open Source</a></p>
+                            <p class="text-center"><strong><span class="Harvest" id="reward2">0.00000</span> DMH ready to be harvested</strong></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="tewkenstake"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
