--- a/TopiaStake.html
+++ b/TopiaStake.html
@@ -19,10 +19,10 @@
         </div>
     </nav>
     <div class="text-center" style="padding-top: 50px;">
-        <h1 class="display-2 text-center"><img src="assets/img/transparentlogo.png" style="width: 75px;"><br></h1>
-        <h1><strong>Frag</strong></h1>
+        <h1 class="display-2 text-center"><img src="assets/img/topia-min.png" style="width: 75px;"><br></h1>
+        <h1><strong>Topia</strong></h1>
     </div>
-    <h3 class="text-center">Stake <strong>Frag&nbsp;</strong>and earn <strong>DMH</strong></h3>
+    <h3 class="text-center">Stake <strong>Topia&nbsp;</strong>and earn <strong>DMH</strong></h3>
     <div>
         <div class="container">
             <div class="row">
@@ -39,10 +39,10 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title"><img src="assets/img/transparentlogo.png" style="width: 75px;"><br></h1>
+                            <h1 class="display-4 text-center card-title"><img src="assets/img/topia-min.png" style="width: 75px;"><br></h1>
                             <h1 class="text-center"><span id="stakedBalance"><strong>NaN</strong><br></span></h1>
-                            <h6 class="text-center"><strong>Frag&nbsp;</strong>staked</h6>
-                            <p class="text-center"><strong>Frag&nbsp;</strong>Balance&nbsp;<span id="tokenBalance">NaN</span></p>
+                            <h6 class="text-center"><strong>Topia&nbsp;</strong>staked</h6>
+                            <p class="text-center"><strong>Topia&nbsp;</strong>Balance&nbsp;<span id="tokenBalance">NaN</span></p>
                             <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Stake</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
                                 <button
                                     class="btn btn-primary button" id="unstake" type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button>
