--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/Coming-Soon-Icon.png" style="width: 37px;"><br></h1>
+                            <h1 class="text-center card-title"><img src="assets/img/topia-min.png" style="width: 37px;"><br></h1>
                             <h3 class="text-center white" id="w">Coming soon</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Coming soon</strong><br></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn X<strong>&nbsp;DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
-                            <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Topia</strong><br></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn 500<strong>&nbsp;DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.org/#/contract/TPg2tafQbAarSnDMFc4gdYToKh3ZCbbADp" style="margin-bottom: 32px;">Open Source</a></p>
+                            <p class="text-center"><span id="rewards3" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="topiastake"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
