--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="text-center card-title"><img src="assets/img/topia-min.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">Coming soon</h3>
+                            <h3 class="text-center white" id="w">Topia</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Topia</strong><br></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn 500<strong>&nbsp;DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.org/#/contract/TPg2tafQbAarSnDMFc4gdYToKh3ZCbbADp" style="margin-bottom: 32px;">Open Source</a></p>
