--- a/SUNStake.html
+++ b/SUNStake.html
@@ -23,7 +23,7 @@
         <h1 class="display-2 text-center"><img src="assets/img/SUNLogo.178d4636.png"><br></h1>
         <h1><strong>SUN Trx-LP</strong></h1>
     </div>
-    <h3 class="text-center">Stake <strong>SUN Trx-LP&nbsp;</strong>and earn <strong>DMH</strong></h3>
+    <h3 class="text-center">Stake <strong>Please unstake as pool is ending&nbsp;</strong><strong>DMH</strong></h3>
     <div>
         <div class="container">
             <div class="row">
